examples/regressions/129_int_defaulting_generalization.an
a = 1, 2
b = a
c = b

// The original bug can still be triggered using functions
// f () = b
// e = f ()

first b + 2u64
second b + 2i64


// Expected results with the function block uncommented:
// f : (forall a. (Unit -> (U64, I64) can a))
// e : (U64, I64)

// args: --check --show-types
// expected exit status: 2
// expected stderr:
// error: unexpected argument '--show-types' found
// 
//   tip: a similar argument exists: '--show-time'
// 
// Usage: ante --check --show-time [FILES]...
// 
// For more information, try '--help'.

